@@ -1,4 +1,4 @@
-/* $Id: match-age.c,v 1.23 2007-01-11 22:22:59 nicm Exp $ */
+/* $Id: match-age.c,v 1.24 2007-01-26 12:19:39 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -90,7 +90,7 @@ age_match(struct match_ctx *mctx, struct expritem *ei)
 
 	memset(&tm, 0, sizeof tm);
 
-	hdr = find_header(m, "Date:", &len);
+	hdr = find_header(m, "Date:", &len, 1);
 	if (hdr == NULL || len == 0 || len > INT_MAX)
 		goto invalid;
 	/* make a copy of the header */
