@@ -2,4 +2,9 @@
 
 * Assigned a number to each rule and changed logging to refer to it. Also
   tweaked the -vv configuration file output.
-
+* Changed some vasprintf to xvasprintf now that the latter exists.
+* Fixed command.c to trim CR line end if present, this makes IMAP over ssh
+  work. (0.9a)
+* Fixed miscalculation of length in find_header. (0.9a)
+* Made fdm insert two headers (X-fdm-Account-Name and X-fdm-Rule-Number) to
+  help with tracking a mail.
